@@ -61,5 +61,17 @@
 			</locale>
 		</schema>
 
+		<schema>
+			<key>/schemas/apps/vinagre/show_accels</key>
+			<applyto>/apps/vinagre/show_accels</applyto>
+			<owner>vinagre</owner>
+			<type>bool</type>
+			<default>true</default>
+			<locale name="C">
+				<short>Whether we should show the menu accelerators (shortcut keys)</short>
+				<long>Set to "false" to disable menu shortcuts. Set to "true" to enable them. Note that if they are enabled, those keys will be intercepted by the menu and will not be sent to the remote host.</long>
+			</locale>
+		</schema>
+
 	</schemalist>
 </gconfschemafile>
