@@ -1,5 +1,9 @@
 2008-05-29  Jonh Wendell <jwendell@gnome.org>
 
+	Added a gconf key to disable menu shortcuts.
+
+2008-05-29  Jonh Wendell <jwendell@gnome.org>
+
 	* src/vinagre-window.c,
 	* src/vinagre-tab.[ch]: Get rid of grabbing cursor. Keyboard is grabbed
 	automatically.
